Fix hover style on narrow hero cards. Closes #167

--- a/react/src/stylesheets/components/ContentArea/HeroRolesContainer/HeroRolesList/HeroCard/_HeroCard.scss
+++ b/react/src/stylesheets/components/ContentArea/HeroRolesContainer/HeroRolesList/HeroCard/_HeroCard.scss
@@ -4,6 +4,7 @@
 }
 
 .HeroCard {
+  position: relative;
   padding: 5px 8px;
   min-height: 60px;
 
@@ -48,8 +49,9 @@
 
   .button-primary {
     display: none;
+    position: absolute;
+    right: 0;
     height: 15px;
-    margin-left: auto;
     margin-right: 15px;
   }
 
